# K2G-BiCTC-Keypoints-to-Gloss-BiLSTM-CTC-

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: bilstm_ctc.yaml
data/: README.md
scripts/: extract_keypoints.py  infer_ctc.py  prepare_cecsl.py  train_ctc.py
src/bisignlangtrans/: __init__.py  decoding.py
src/bisignlangtrans/data/: __init__.py  ce_csl.py  features.py  keypoints.py
src/bisignlangtrans/models/: __init__.py  bilstm_ctc.py
