[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k2g-bictc"
version = "0.1.0"
description = "K2G-BiCTC: Keypoints-to-Gloss baseline with BiLSTM+CTC"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Turtledove" }
]
keywords = ["sign-language", "ctc", "bilstm", "mediapipe", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "torch",
  "tqdm",
  "numpy",
  "opencv-python",
  "mediapipe==0.10.14",
  "pyyaml"
]

[project.urls]
Homepage = "https://github.com/Turtledove/K2G-BiCTC"
Issues = "https://github.com/Turtledove/K2G-BiCTC/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
